<resources>
    <string name="app_name">00010358-learning-center</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_title_req">Word Title</string>
    <string name="word_transcript_req">Word Transcript</string>
    <string name="word_definition_req">Word Definition</string>
    <string name="save_action">Save</string>
    <string name="add_new_word">Add new word</string>
    <string name="word">Word</string>
    <string name="transcript">Transcript</string>
    <string name="delete">Delete</string>
    <string name="edit_item">Edit</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_fragment_title">Edit Word</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="word_count">%d of %d words</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="enter_your_word">Enter word</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="score">Score: %d</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try Again</string>
    <string name="service2">Elementary</string>
    <string name="service3">Pre-Intermediate</string>
    <string name="service4">Introduction</string>
    <string name="service5">Pre-IELTS</string>
    <string name="service6">Foundation</string>
    <string name="service7">Graduation</string>
    <string name="service1">Beginner</string>
    <string name="title_placeholder">Title</string>
    <string name="price">Price</string>
    <string name="word_found_req">Number of correct word</string>
    <string name="show_statistics">Show statistics</string>
    <string name="pref_file_key">pref_file_key</string>
    <string name="pref_is_user_login">isuserlogin</string>
    <string name="pref_name_of_user">nameofuser</string>
</resources>